objects/ssot__AssessmentTaskIndicatorDefinition__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssessmentIndicatorDefinitionId__c</fullName>
        <label>Assessment Indicator Definition</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentTaskDefinitionId__c</fullName>
        <label>Assessment Task Definition</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BusinessUnitId__c</fullName>
        <label>Business Unit</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasScore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Assessment Task Indicator Definition Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsProductRelevant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Product Relevant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__MeasureLevelId__c</fullName>
        <label>Measure Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>